unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Related_owner_object_type_1__c.field-meta.xml
<CustomField>
    <fullName>n2de__Related_owner_object_type_1__c</fullName>
    <label>First related owner object type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>