unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Related_owner_role_2__c.field-meta.xml
<CustomField>
    <fullName>n2de__Related_owner_role_2__c</fullName>
    <label>Second related owner role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>