unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Remove_sticky_on_reassignment__c.field-meta.xml
<CustomField>
    <fullName>n2de__Remove_sticky_on_reassignment__c</fullName>
    <inlineHelpText>Determines whether to remove sticky assignments for a user if a record has been reassigned</inlineHelpText>
    <label>Remove sticky from reassigned records</label>
    <length>20</length>
    <type>Text</type>
</CustomField>