unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Source_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Source_type__c</fullName>
    <inlineHelpText>Source of objects for this distributor: User, Queue or Status.</inlineHelpText>
    <label>Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>