unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Sticky_assignment_id_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_assignment_id_field_name__c</fullName>
    <inlineHelpText>The selected field that will contain the unique identifier to be used when determining whether an object should be distributed as a sticky assignment</inlineHelpText>
    <label>Sticky match field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>