unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Sticky_match_level__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_match_level__c</fullName>
    <inlineHelpText>The level at which sticky assignment matching should occur.</inlineHelpText>
    <label>Sticky match level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>