unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Sticky_period__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_period__c</fullName>
    <inlineHelpText>The period of time a sticky assignment should remain active</inlineHelpText>
    <label>Sticky period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>