unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Sticky_period_minutes__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_period_minutes__c</fullName>
    <formula>IF( ISPICKVAL( n2de__Sticky_unit__c, &#39;Days&#39;), n2de__Sticky_period__c * 1440, IF( ISPICKVAL( n2de__Sticky_unit__c, &#39;Hours&#39;), n2de__Sticky_period__c * 60, n2de__Sticky_period__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sticky period minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>