unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__Subteam_members__c.field-meta.xml
<CustomField>
    <fullName>n2de__Subteam_members__c</fullName>
    <label>Subteam members</label>
    <summaryForeignKey>n2de__Distributor_category_team_member__c.n2de__Distributor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>