unpackaged/main/default/objects/n2de__Distributor__c/fields/n2de__User_exclusion_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__User_exclusion_field_name__c</fullName>
    <description>Name of the field, on the distributed object or on a lookup relationship from the distributed object, containing the id or ids of Users to exclude from assignment</description>
    <label>User_exclusion_field_name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>